# Recd-Website

./: .gitignore  DataScript.py  README.md  index.html  package-lock.json  package.json
backend/: Cargo.toml  api_back.rs  recd.db
backend/src/: api_get.rs  api_post.rs  main.rs  post.rs
backend/src/Backend API/: api_back.rs
frontend/src/: App.tsx  index.css
frontend/src/components/assets/: Button.tsx
frontend/src/components/navbar/: navbar.css  navbar.tsx
frontend/src/components/user-profile/: UserProfile.css  UserProfile.tsx
src/: App.css  App.tsx  AppRoutes.tsx  index.css
src/components/cards/: Card.css  MediaCard.tsx  ReviewCard.tsx  UserCard.tsx
src/components/media-display/: MediaDisplay.tsx
src/components/media-form/: MediaForm.tsx
src/components/navbar/: navbar.css  navbar.tsx
src/components/review-form/: ReviewForm.css  ReviewForm.tsx
src/components/review-post/: ReviewPost.tsx
src/components/user-login/: UserLogin.css  UserLogin.tsx
src/components/user-profile/: UserProfile.css  UserProfile.tsx
src/components/user-signup/: UserSignup.css  UserSignup.tsx
src/pages/books/: books.tsx
src/pages/home/: home.tsx
src/pages/login/: login.css  login.tsx
src/pages/media-display/: MediaDisplay.tsx
src/pages/misc/: misc.tsx
src/pages/movies/: movies.tsx
src/pages/profile/: profile.css  profile.tsx
src/pages/profile-display/: ProfileDisplay.tsx
src/pages/review-display/: ReviewDisplay.tsx
src/pages/search/: search.css  search.tsx
src/pages/shows/: shows.tsx
src/pages/signup/: signup.css  signup.tsx
(+54 files in other folders)
