[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"           # Or the latest compatible version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "runtime-async-std-native-tls"] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.13.1", features = ["attributes"] }
futures = "0.3.31"
